templates/prometheus/060-Route-prometheus.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: prometheus
spec:
  port:
    targetPort: prometheus
  tls:
    termination: edge
  to:
    kind: Service
    name: prometheus
